--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 :root {
 	--primary-color: #24273D;
 	--secondary-color: #343A40;
+	--white: #fff;
 }
 
 body {
@@ -14,9 +15,12 @@ body {
 	color: var(--secondary-color);
 }
 
+#movieGenreLabel {
+	color: var(--white);
+}
+
 .modal-dialog {
 	min-width: 100%;
-	color: red;
 }
 
 .modal-content {
